# BancolombiaClone

./: .clang  .gitignore  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  compile_commands.json
.cache/clangd/index/: Account.cpp.D2D174FFD94EA034.idx  MainWindow.cpp.909AF9459F95B6FF.idx  MainWindow.h.4CE9198FB8289C42.idx  Transaction.cpp.CD359F46FBBB4CF7.idx  main.cpp.D7934F6415789308.idx
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
src/: main.cpp
src/gui/: MainWindow.cpp  MainWindow.h  MainWindow.ui
src/resources/: resources.qrc
